# xyz

./: pyproject.toml  requirments.txt  run.sh  setup.sh
blog/: admin.py  middleware.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_certificates.py  0003_alter_certificates_photo.py  0004_document_alter_certificates_photo.py
django_project/: settings.py
templates/: base.html  index.html  lock.html
templates/blog/: about.html  blog.html  blog_detail.html  project_detail.html  projects.html
templates/certificates/: certificates.html
templates/documents/: documents.html
templates/static/: script.js  style.css
